--- a/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryTrackCell/LibraryTrackCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryTrackCell/LibraryTrackCell.xib
@@ -29,10 +29,10 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="pYG-m9-NRt">
-                                <rect key="frame" x="49.999999999999993" y="14.666666666666668" width="101.33333333333331" height="35.666666666666657"/>
+                                <rect key="frame" x="49.999999999999993" y="14.666666666666668" width="71.333333333333314" height="35.666666666666657"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QkQ-0H-VFJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="101.33333333333333" height="15"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="71.333333333333329" height="15"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4JX-AA-FCr">
                                                 <rect key="frame" x="0.0" y="0.0" width="33" height="15"/>
@@ -50,13 +50,13 @@
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wL1-gy-irS">
-                                                <rect key="frame" x="58" y="0.0" width="43.333333333333343" height="15"/>
+                                                <rect key="frame" x="58.000000000000007" y="0.0" width="13.333333333333336" height="15"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sza-mT-ujr">
-                                        <rect key="frame" x="0.0" y="19.999999999999996" width="101.33333333333333" height="15.666666666666668"/>
+                                        <rect key="frame" x="0.0" y="19.999999999999996" width="71.333333333333329" height="15.666666666666668"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -64,11 +64,15 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nn4-uF-qrO">
-                                <rect key="frame" x="161.33333333333334" y="7.6666666666666714" width="101.00000000000003" height="50"/>
+                                <rect key="frame" x="131.33333333333334" y="7.6666666666666714" width="101" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.down.square.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GvG-dT-cf0">
-                                <rect key="frame" x="267.33333333333331" y="24.333333333333329" width="20" height="17"/>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="jeo-Xf-75W">
+                                <rect key="frame" x="242.33333333333334" y="22.666666666666664" width="20.000000000000028" height="20"/>
+                                <color key="color" systemColor="systemPurpleColor"/>
+                            </activityIndicatorView>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.down.heart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GvG-dT-cf0">
+                                <rect key="frame" x="267.33333333333331" y="24.666666666666664" width="20" height="17"/>
                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="EX2-p3-zRO"/>
@@ -100,6 +104,7 @@
                 <outlet property="artistLabel" destination="Sza-mT-ujr" id="yHs-dV-Erp"/>
                 <outlet property="coverView" destination="hek-FK-QHX" id="CMs-V9-uY9"/>
                 <outlet property="downloadImageView" destination="GvG-dT-cf0" id="9J6-sm-scA"/>
+                <outlet property="downloadIndicator" destination="jeo-Xf-75W" id="8rQ-sr-9us"/>
                 <outlet property="explicitImageView" destination="wuA-sg-g0o" id="qBf-NV-RdC"/>
                 <outlet property="menuButton" destination="TJ7-HG-Vi3" id="j1V-aV-nkD"/>
                 <outlet property="titleLabel" destination="4JX-AA-FCr" id="XKy-gG-jUR"/>
@@ -108,7 +113,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrow.down.square.fill" catalog="system" width="128" height="114"/>
+        <image name="arrow.down.heart.fill" catalog="system" width="128" height="107"/>
         <image name="e.square.fill" catalog="system" width="128" height="114"/>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <systemColor name="labelColor">
