--- a/music-app/music-app/Controllers/ViewControllers/AddPlaylistController/AddPlaylistController.xib
+++ b/music-app/music-app/Controllers/ViewControllers/AddPlaylistController/AddPlaylistController.xib
@@ -3,7 +3,6 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,13 +11,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddPlaylistController" customModule="music_app" customModuleProvider="target">
             <connections>
                 <outlet property="addImageView" destination="Nju-ek-0OO" id="qP2-c4-Lxp"/>
-                <outlet property="addTracksButton" destination="KKu-n5-oej" id="eCJ-ld-fSp"/>
                 <outlet property="cancelButton" destination="6b9-jq-sLd" id="Ynl-Oc-3i4"/>
                 <outlet property="doneButton" destination="sxD-8h-mta" id="vTp-8F-6UW"/>
                 <outlet property="playlistImageView" destination="l6W-Pq-Ehh" id="Q5A-A9-c2N"/>
-                <outlet property="playlistNameTextField" destination="5B9-QI-0ZE" id="btB-eB-HZz"/>
+                <outlet property="playlistNameTextField" destination="5B9-QI-0ZE" id="Z5s-FW-qmY"/>
                 <outlet property="titleLabel" destination="I4Y-SQ-Dsg" id="dbM-hz-WFB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="viewTitleLabel" destination="I4Y-SQ-Dsg" id="IrA-m1-rAS"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -27,7 +26,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="lL8-3W-X5W">
-                    <rect key="frame" x="0.0" y="16" width="393" height="34.333333333333343"/>
+                    <rect key="frame" x="0.0" y="75" width="393" height="34.333333333333343"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6b9-jq-sLd">
                             <rect key="frame" x="0.0" y="0.0" width="76.666666666666671" height="34.333333333333336"/>
@@ -56,16 +55,15 @@
                     </subviews>
                 </stackView>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter playlist name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5B9-QI-0ZE">
-                    <rect key="frame" x="16" y="282.33333333333331" width="361" height="34"/>
+                    <rect key="frame" x="16" y="341.33333333333331" width="361" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <action selector="textFieldDidChange:" destination="-1" eventType="editingChanged" id="03z-cu-c5N"/>
+                    </connections>
                 </textField>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="v6J-X7-EZN">
-                    <rect key="frame" x="0.0" y="366.66666666666674" width="393" height="485.33333333333326"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </tableView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="music.note.list" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="l6W-Pq-Ehh">
-                    <rect key="frame" x="96.666666666666686" y="67.333333333333329" width="200" height="198.66666666666669"/>
+                    <rect key="frame" x="96.666666666666686" y="126.33333333333333" width="200" height="198.66666666666669"/>
                     <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="l6W-Pq-Ehh" secondAttribute="height" multiplier="1:1" id="U52-t1-9LJ"/>
@@ -74,7 +72,7 @@
                     </constraints>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.app.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Nju-ek-0OO">
-                    <rect key="frame" x="161.66666666666666" y="133" width="70" height="67"/>
+                    <rect key="frame" x="161.66666666666666" y="192" width="70" height="67"/>
                     <color key="tintColor" systemColor="labelColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="70" id="Dsl-FH-DXm"/>
@@ -82,33 +80,18 @@
                         <constraint firstAttribute="width" secondItem="Nju-ek-0OO" secondAttribute="height" multiplier="1:1" id="z6O-rL-c6w"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KKu-n5-oej">
-                    <rect key="frame" x="16" y="332.33333333333331" width="361" height="34.333333333333314"/>
-                    <color key="tintColor" systemColor="systemPurpleColor"/>
-                    <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Add tracks" imagePadding="5">
-                        <imageReference key="image" image="plus" catalog="system" symbolScale="small"/>
-                    </buttonConfiguration>
-                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="v6J-X7-EZN" secondAttribute="bottom" id="1E6-3Y-AEY"/>
                 <constraint firstItem="5B9-QI-0ZE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="2ro-Oo-3xs"/>
                 <constraint firstItem="Nju-ek-0OO" firstAttribute="centerX" secondItem="l6W-Pq-Ehh" secondAttribute="centerX" id="303-uq-al6"/>
-                <constraint firstItem="v6J-X7-EZN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Asg-Px-riS"/>
                 <constraint firstItem="Nju-ek-0OO" firstAttribute="centerY" secondItem="l6W-Pq-Ehh" secondAttribute="centerY" id="Cza-oS-rOL"/>
                 <constraint firstItem="5B9-QI-0ZE" firstAttribute="top" secondItem="l6W-Pq-Ehh" secondAttribute="bottom" constant="16" id="Ggl-mK-7Fd"/>
-                <constraint firstItem="KKu-n5-oej" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="GvJ-jQ-KvG"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="v6J-X7-EZN" secondAttribute="trailing" id="Gzr-9V-mGN"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="lL8-3W-X5W" secondAttribute="trailing" id="IKa-WQ-P1I"/>
-                <constraint firstItem="KKu-n5-oej" firstAttribute="top" secondItem="5B9-QI-0ZE" secondAttribute="bottom" constant="16" id="PZd-Z7-OQZ"/>
                 <constraint firstItem="l6W-Pq-Ehh" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="QCV-ih-twR"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="KKu-n5-oej" secondAttribute="trailing" constant="16" id="cOK-UT-CN8"/>
                 <constraint firstItem="lL8-3W-X5W" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="iPo-Hx-uwL"/>
                 <constraint firstItem="lL8-3W-X5W" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="jwc-Hx-trv"/>
-                <constraint firstItem="v6J-X7-EZN" firstAttribute="top" secondItem="KKu-n5-oej" secondAttribute="bottom" id="ukf-Vv-LCA"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5B9-QI-0ZE" secondAttribute="trailing" constant="16" id="vyf-Jt-Z4O"/>
                 <constraint firstItem="l6W-Pq-Ehh" firstAttribute="top" secondItem="lL8-3W-X5W" secondAttribute="bottom" constant="16" id="x1v-jr-Pkd"/>
             </constraints>
@@ -117,7 +100,6 @@
     </objects>
     <resources>
         <image name="music.note.list" catalog="system" width="128" height="115"/>
-        <image name="plus" catalog="system" width="128" height="113"/>
         <image name="plus.app.fill" catalog="system" width="128" height="114"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
