--- a/music-app/music-app/Controllers/Cells/TableViewCells/PlaylistSection/TrackInPlaylistCell/TrackInPlaylistCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/PlaylistSection/TrackInPlaylistCell/TrackInPlaylistCell.xib
@@ -31,7 +31,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="fz7-ZQ-OKP">
                                 <rect key="frame" x="58" y="57" width="69" height="40.333333333333343"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TKs-SW-uEG">
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="TKs-SW-uEG">
                                         <rect key="frame" x="0.0" y="0.0" width="69" height="15"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="duG-Y4-kbn">
@@ -41,7 +41,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="e.square.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Dkh-tu-1LH">
-                                                <rect key="frame" x="33" y="1.6666666666666643" width="15" height="12.000000000000004"/>
+                                                <rect key="frame" x="41" y="1.6666666666666643" width="15" height="12.000000000000004"/>
                                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="Dkh-tu-1LH" secondAttribute="height" multiplier="1:1" id="Ndn-8L-azm"/>
@@ -50,7 +50,7 @@
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E50-HB-d4O">
-                                                <rect key="frame" x="48" y="0.0" width="21" height="15"/>
+                                                <rect key="frame" x="64" y="0.0" width="5" height="15"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                         </subviews>
