--- a/music-app/music-app/Controllers/ViewControllers/LibrarySection/LibraryPlaylistsController/LibraryPlaylistsController.xib
+++ b/music-app/music-app/Controllers/ViewControllers/LibrarySection/LibraryPlaylistsController/LibraryPlaylistsController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LibraryPlaylistsController" customModule="music_app" customModuleProvider="target">
             <connections>
                 <outlet property="descriptionLabel" destination="hLE-ie-ag4" id="XHh-5N-Soa"/>
+                <outlet property="emptyImageView" destination="Qgq-z2-Hqh" id="aTg-pP-f5n"/>
                 <outlet property="emptyInfoView" destination="MBh-5d-YUf" id="7rN-QA-khK"/>
                 <outlet property="playlistsTableView" destination="2V2-bd-bGX" id="zJj-FP-304"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -22,11 +23,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2V2-bd-bGX">
-                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MBh-5d-YUf">
-                    <rect key="frame" x="86.666666666666686" y="303.66666666666669" width="220" height="270.00000000000006"/>
+                    <rect key="frame" x="86.666666666666686" y="291" width="220" height="270"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.square.dashed" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Qgq-z2-Hqh">
                             <rect key="frame" x="10" y="11.666666666666657" width="200" height="197"/>
@@ -38,7 +39,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There is no playlists. Tap here to create playlist" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLE-ie-ag4">
-                            <rect key="frame" x="10" y="219.99999999999994" width="200" height="40.666666666666686"/>
+                            <rect key="frame" x="10" y="220" width="200" height="40.666666666666686"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
